# Oasyce_Claw_Plugin_Engine

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTRO_CN.md  LICENSE  Makefile  QUICKSTART_ZH.md  README.md  README.old.md  README_CN.md  README_EN.md  SECURITY.md  SKILL.md  TODO.md  docker-compose.mainnet.yml  docker-compose.yml  prometheus.mainnet.yml  pyproject.toml  setup.py  test_dummy.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.well-known/: ai-plugin.json
dashboard/: .impeccable.md  MIGRATION.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/docs/: PRD-capability-sell.md
dashboard/src/: app.tsx  global.d.ts  main.tsx  utils.ts
docs/: ACCOUNT_UNIFICATION_PLAN.md  AGENT_CORE_FLOW_CONTRACT.md  AI_DECISION_RULES.md  ARCHITECTURE_UPGRADE_REPORT.md  BETA_CORE_FLOW.md  BETA_EXECUTION_TODO.md  BETA_RUNBOOK.md  BETA_SMOKE_CHECKLIST.md  DEPLOYMENT_BOUNDARY.md  ECONOMICS.md  FAQ.md  IDENTITY_WALLET_ARCHITECTURE.md  OASYCE_PROTOCOL_OVERVIEW.md  PHASE3_PLUS_DESIGN.md  PRD.md  PRODUCT_AUDIT_2026-03-22.md  PROTOCOL.md  RELEASE_GATE.md  RETROSPECTIVE_2026_03.md  SIMPLIFICATION_TODO.md  TESTNET.md  USER_JOURNEYS.md  USER_JOURNEY_MAP.md  conf.py  index.rst  internal-testnet-guide.md  public-testnet-guide.md
docs/user_guide/: configuration.rst  installation.rst  quickstart.rst
examples/: 01_register_asset.py  02_batch_register.py  04_privacy_and_storage.py
oasyce/: __init__.py  account_state.py  chain_client.py  cli.py  client.py  config.py  doc_contract.json  doc_contract.py  engine.py  identity.py  info.py  middleware.py  protocol.py  server.py  update_manager.py  utils.py
oasyce/ahrp/: __init__.py  api.py  executor.py  market.py  persistence.py  router.py  task_market.py
oasyce/api/: deps.py  main.py  schemas.py
oasyce/bridge/: core_bridge.py
oasyce/capabilities/: __init__.py  _pricing_shim.py  dispute.py  escrow.py  internal_capabilities.py  invocation.py  manifest.py  pipeline.py  pricing.py  protocol_consumer.py  protocol_tasks.py  quality.py  rating.py  registry.py  shares.py
oasyce/core/: __init__.py  evidence.py  formulas.py  protocol_params.py
oasyce/crypto/: keys.py  merkle.py
oasyce/engines/: core_engines.py  risk.py  schema.py
oasyce/explorer/: app.py
oasyce/fingerprint/: engine.py  registry.py
oasyce/gui/: __init__.py  app.py
oasyce/interfaces/: pricing.py  registry.py  settlement.py  verifier.py
oasyce/logging/: __init__.py
oasyce/mock/: mock_pricing.py  mock_registry.py  mock_settlement.py  mock_verifier.py
oasyce/models/: __init__.py  asset.py  capture_pack.py  shares.py  transaction.py
oasyce/network/: __init__.py  bootstrap.py  broadcast.py  config.py  consensus.py  discovery.py  identity.py  message.py  monitor.py  nat.py  node.py  scoring.py  transport.py  worker_client.py
oasyce/offline/: __init__.py  offline_mode.py  provider_cache.py
oasyce/oracle/: __init__.py  feeds.py  internal.py
oasyce/proto/: __init__.py
oasyce/schema_registry/: __init__.py  registry.py  schemas.py  types.py  validation.py
oasyce/scripts/: auto_test_genesis.py  demo_network.py
oasyce/security/: __init__.py  keymanager.py
oasyce/services/: account_service.py  asset_availability.py  asset_update_audit.py  beta_support.py  buy_notifications.py  buy_runtime.py  facade.py  faucet.py  fingerprint.py  inbox.py  notifications.py  public_beta_gate.py  public_beta_signer.py  sandbox.py  scanner.py  scheduler.py  testnet.py  watermark.py  work_value.py
oasyce/skills/: agent_skills.py
oasyce/standards/: __init__.py  oas.py  oas_das.py  oas_identity.py  oas_oracle.py
oasyce/storage/: __init__.py  backend.py  factory.py  ipfs_client.py  ledger.py  postgres_backend.py  sqlite_backend.py
oasyce_plugin/: __init__.py  cli.py  config.py  identity.py  info.py  models.py
oasyce_plugin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
oasyce_plugin/bridge/: core_bridge.py
oasyce_plugin/consensus/: __init__.py  epoch.py  genesis.py  node.py  offline_mode.py  proposer.py  provider_cache.py  rewards.py  slashing.py  state.py  testnet_config.py  validator_registry.py
oasyce_plugin/crypto/: __init__.py  keys.py  merkle.py
oasyce_plugin/engines/: core_engines.py  result.py  risk.py  schema.py
oasyce_plugin/explorer/: app.py
oasyce_plugin/fingerprint/: __init__.py  engine.py  (+1 more)
scripts/: auto_test_genesis.py  demo_e2e.sh  deploy_mainnet.sh  deploy_testnet.sh  install_wizard.py  qa_regression.py  quickstart.py  release_check.py  run_faucet.py  setup_mainnet_validator.sh  setup_validator.sh  sync_docs.py  user_journey_walkthrough.py
tests/: conftest.py  run_tests.py  test_access_control.py  test_account_service.py  test_account_state.py  test_agent_core_contract.py  test_ahrp.py  test_ahrp_api.py  test_ahrp_executor.py  test_ahrp_market.py  test_ahrp_persistence.py  test_ahrp_router.py  test_ahrp_signing.py  test_api.py  test_architecture.py  test_asset_availability.py  test_asset_update_audit.py  test_beta_support.py  test_beta_support_store.py  test_beta_trace.py  test_block_sync.py  test_blockchain.py  test_buy_notifications.py  test_buy_runtime.py  test_capability_delivery.py  test_capability_integration.py  test_capability_invocation.py  test_capability_quality.py  test_capability_registry.py  test_chain_client.py  test_cli.py  test_consensus.py  test_consensus_refactor.py  test_consensus_state.py  test_contribution.py  test_core_bridge.py  test_core_bridge_unit.py  test_core_flow.py  test_core_formulas.py  test_crypto.py  (+61 more)
(+191 files in other folders)
