[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oasyce"
version = "1.10.0"
description = "Decentralized data ownership and settlement protocol for the AI era"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shangrila", email = "wutc@oasyce.com"}
]
keywords = ["oasyce", "data-ownership", "settlement", "ai", "web3", "bonding-curve", "p2p", "staking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "cryptography>=41.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["black>=23.0", "flake8>=6.0", "mypy>=1.0"]

[project.scripts]
oasyce = "oasyce_plugin.cli:main"

[project.urls]
Homepage = "https://github.com/Shangri-la-0428/Oasyce_Claw_Plugin_Engine"
Documentation = "https://github.com/Shangri-la-0428/Oasyce_Claw_Plugin_Engine/tree/main/docs"
Issues = "https://github.com/Shangri-la-0428/Oasyce_Claw_Plugin_Engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["oasyce_plugin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
